--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["mgd <mr.zizikk@gamil.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+Django = "^4.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
