--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["mgd <mr.zizikk@gamil.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.2.2"
+django-environ = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
