--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Django = "^4.2.2"
 django-environ = "^0.10.0"
 pytest = "^7.4.0"
+psycopg2-binary = "^2.9.6"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.3"
