--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.2.2"
 django-environ = "^0.10.0"
 pytest = "^7.4.0"
 psycopg2-binary = "^2.9.6"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.3"
