--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pytest = "^7.4.0"
 psycopg2-binary = "^2.9.6"
 djangorestframework = "^3.14.0"
 django-filter = "^23.2"
+pytest-django = "^4.5.2"
+factory-boy = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.3"
