--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.14.0"
 django-filter = "^23.2"
 pytest-django = "^4.5.2"
 factory-boy = "^3.2.1"
+drf-spectacular = "^0.26.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.3"
