--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-filter = "^23.2"
 pytest-django = "^4.5.2"
 factory-boy = "^3.2.1"
 drf-spectacular = "^0.26.3"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.3.3"
